Fix header alignment in IE

--- a/cd-menu/cd-menu.less
+++ b/cd-menu/cd-menu.less
@@ -191,6 +191,7 @@
 @media screen and (min-width: 1340px) {
   .cd-menu {
     margin: 0 auto;
+    width: 1280px;
 
     &__content-container {
       margin: 0 auto;
